--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "leave-management-system",
   "version": "2.2.0",
@@ -14,21 +13,21 @@
     "dist": "npm run build && electron-builder"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "better-sqlite3": "^11.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.10.3",
-    "xlsx": "^0.18.5",
-    "sqlite3": "^5.1.7",
-    "bcryptjs": "^2.4.3"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
-    "electron": "^28.2.0",
-    "electron-builder": "^24.9.1",
-    "electron-rebuild": "^3.2.9",
     "cross-env": "^7.0.3",
+    "electron": "^28.2.0",
+    "electron-builder": "^24.13.3",
+    "electron-rebuild": "^3.2.9",
     "typescript": "^5.3.3",
     "vite": "^5.0.0"
   },
@@ -42,7 +41,9 @@
       "target": [
         {
           "target": "nsis",
-          "arch": ["x64"]
+          "arch": [
+            "x64"
+          ]
         }
       ],
       "icon": "icon.ico"
